Creates Havana500 App and initial configurations and packages

--- a/nx.json
+++ b/nx.json
@@ -7,5 +7,12 @@
     "tslint.json": "*",
     "nx.json": "*"
   },
-  "projects": {}
+  "projects": {
+    "havana500-webclient": {
+      "tags": []
+    },
+    "havana500-webclient-e2e": {
+      "tags": []
+    }
+  }
 }
