--- a/angular.json
+++ b/angular.json
@@ -2,13 +2,143 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "",
-  "projects": {},
+  "projects": {
+    "havana500-webclient": {
+      "root": "apps/havana500-webclient/",
+      "sourceRoot": "apps/havana500-webclient/src",
+      "projectType": "application",
+      "prefix": "ant",
+      "schematics": {
+        "@schematics/angular:component": {
+          "styleext": "scss"
+        }
+      },
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/apps/havana500-webclient",
+            "index": "apps/havana500-webclient/src/index.html",
+            "main": "apps/havana500-webclient/src/main.ts",
+            "polyfills": "apps/havana500-webclient/src/polyfills.ts",
+            "tsConfig": "apps/havana500-webclient/tsconfig.app.json",
+            "assets": [
+              "apps/havana500-webclient/src/favicon.ico",
+              "apps/havana500-webclient/src/assets"
+            ],
+            "styles": [
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
+              "apps/havana500-webclient/src/styles.scss"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "apps/havana500-webclient/src/environments/environment.ts",
+                  "with": "apps/havana500-webclient/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "havana500-webclient:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "havana500-webclient:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "havana500-webclient:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "apps/havana500-webclient/src/test.ts",
+            "polyfills": "apps/havana500-webclient/src/polyfills.ts",
+            "tsConfig": "apps/havana500-webclient/tsconfig.spec.json",
+            "karmaConfig": "apps/havana500-webclient/karma.conf.js",
+            "styles": [
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
+              "apps/havana500-webclient/src/styles.scss"
+            ],
+            "scripts": [],
+            "assets": [
+              "apps/havana500-webclient/src/favicon.ico",
+              "apps/havana500-webclient/src/assets"
+            ]
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/havana500-webclient/tsconfig.app.json",
+              "apps/havana500-webclient/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "havana500-webclient-e2e": {
+      "root": "apps/havana500-webclient-e2e/",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "apps/havana500-webclient-e2e/protractor.conf.js",
+            "devServerTarget": "havana500-webclient:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "havana500-webclient:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": "apps/havana500-webclient-e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    }
+  },
   "cli": {
     "warnings": {
       "typescriptMismatch": false,
       "versionMismatch": false
     },
     "defaultCollection": "@nrwl/schematics"
-    
-  }
+  },
+  "defaultProject": "havana500-webclient"
 }
