Creates havana500-admin App and adds basic Architecure for both app proj

--- a/nx.json
+++ b/nx.json
@@ -13,6 +13,12 @@
     },
     "havana500-webclient-e2e": {
       "tags": []
+    },
+    "havana500-admin": {
+      "tags": []
+    },
+    "havana500-admin-e2e": {
+      "tags": []
     }
   }
 }
