--- a/angular.json
+++ b/angular.json
@@ -131,6 +131,129 @@
           }
         }
       }
+    },
+    "havana500-admin": {
+      "root": "apps/havana500-admin/",
+      "sourceRoot": "apps/havana500-admin/src",
+      "projectType": "application",
+      "prefix": "hav500workspace",
+      "schematics": {
+        "@schematics/angular:component": {
+          "styleext": "scss"
+        }
+      },
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/apps/havana500-admin",
+            "index": "apps/havana500-admin/src/index.html",
+            "main": "apps/havana500-admin/src/main.ts",
+            "polyfills": "apps/havana500-admin/src/polyfills.ts",
+            "tsConfig": "apps/havana500-admin/tsconfig.app.json",
+            "assets": [
+              "apps/havana500-admin/src/favicon.ico",
+              "apps/havana500-admin/src/assets"
+            ],
+            "styles": [
+              "apps/havana500-admin/src/styles.scss"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "apps/havana500-admin/src/environments/environment.ts",
+                  "with": "apps/havana500-admin/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "havana500-admin:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "havana500-admin:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "havana500-admin:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "apps/havana500-admin/src/test.ts",
+            "polyfills": "apps/havana500-admin/src/polyfills.ts",
+            "tsConfig": "apps/havana500-admin/tsconfig.spec.json",
+            "karmaConfig": "apps/havana500-admin/karma.conf.js",
+            "styles": [
+              "apps/havana500-admin/src/styles.scss"
+            ],
+            "scripts": [],
+            "assets": [
+              "apps/havana500-admin/src/favicon.ico",
+              "apps/havana500-admin/src/assets"
+            ]
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/havana500-admin/tsconfig.app.json",
+              "apps/havana500-admin/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "havana500-admin-e2e": {
+      "root": "apps/havana500-admin-e2e/",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "apps/havana500-admin-e2e/protractor.conf.js",
+            "devServerTarget": "havana500-admin:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "havana500-admin:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": "apps/havana500-admin-e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "cli": {
