--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@nrwl/nx": "6.2.1",
     "core-js": "^2.5.7",
     "hammerjs": "^2.0.8",
+    "material-design-icons": "^3.0.1",
     "rxjs": "^6.2.2",
     "zone.js": "^0.8.26"
   },
