--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,7 @@
       "root": "apps/havana500-admin/",
       "sourceRoot": "apps/havana500-admin/src",
       "projectType": "application",
-      "prefix": "hav500workspace",
+      "prefix": "ant",
       "schematics": {
         "@schematics/angular:component": {
           "styleext": "scss"
@@ -248,6 +248,34 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "apps/havana500-admin-e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "shared": {
+      "root": "libs/shared",
+      "sourceRoot": "libs/shared/src",
+      "projectType": "library",
+      "prefix": "ant",
+      "architect": {
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "libs/shared/src/test.ts",
+            "tsConfig": "libs/shared/tsconfig.spec.json",
+            "karmaConfig": "libs/shared/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/shared/tsconfig.lib.json",
+              "libs/shared/tsconfig.spec.json"
+            ],
             "exclude": [
               "**/node_modules/**"
             ]
