--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     "moment": "^2.22.2",
     "rxjs": "^6.3.1",
     "typeface-roboto": "^0.0.54",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "reselect": "3.0.1",
+    "classlist.js": "1.1.20150312",
+    "web-animations-js": "2.3.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.5",
