--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "zone.js": "^0.8.26",
     "reselect": "3.0.1",
     "classlist.js": "1.1.20150312",
-    "web-animations-js": "2.3.1"
+    "web-animations-js": "2.3.1",
+    "d3": "4.12.2",
+    "@swimlane/ngx-charts": "7.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.5",
