--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "update:check": "ng update",
     "workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
     "dep-graph": "./node_modules/.bin/nx dep-graph",
-    "help": "./node_modules/.bin/nx help"
+    "help": "./node_modules/.bin/nx help",
+    "bundle-report-admin": "webpack-bundle-analyzer dist/apps/havana500-admin/stats.json"
   },
   "private": true,
   "dependencies": {
@@ -81,8 +82,10 @@
     "ngrx-store-freeze": "^0.2.4",
     "prettier": "1.14.3",
     "protractor": "^5.4.1",
+    "source-map-explorer": "^1.6.0",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
-    "typescript": "~2.9.2"
+    "typescript": "~2.9.2",
+    "webpack-bundle-analyzer": "^3.0.2"
   }
 }
