--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,22 +7,13 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2017",
-      "dom"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2017", "dom"],
     "baseUrl": ".",
     "paths": {
-      "@hav500workspace/shared": [
-        "libs/shared/src/index.ts"
-      ]
+      "@hav500workspace/shared": ["libs/shared/src/index.ts"],
+      "moment": ["./node_modules/moment/min/moment.min.js"]
     }
   },
-  "exclude": [
-    "node_modules",
-    "tmp"
-  ]
+  "exclude": ["node_modules", "tmp"]
 }
