--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
     "ngx-quill": "^3.6.0",
+    "quill": "^1.3.6",
     "reselect": "3.0.1",
     "rxjs": "^6.3.2",
     "typeface-roboto": "^0.0.54",
