--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "@angular/platform-browser": "^6.1.8",
     "@angular/platform-browser-dynamic": "^6.1.8",
     "@angular/router": "^6.1.8",
+    "@fortawesome/angular-fontawesome": "^0.2.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@ngrx/effects": "^6.1.0",
     "@ngrx/router-store": "^6.1.0",
     "@ngrx/store": "^6.1.0",
@@ -54,6 +57,7 @@
     "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
     "ngx-quill": "^3.6.0",
+    "ngx-wig": "^1.6.0",
     "quill": "^1.3.6",
     "reselect": "3.0.1",
     "rxjs": "^6.3.2",
