--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@swimlane/ngx-charts": "9.0.0",
     "angular-froala-wysiwyg": "^2.8.5",
     "angular-oauth2-oidc": "^4.0.3",
+    "bootstrap": "^4.1.3",
     "classlist.js": "1.1.20150312",
     "core-js": "^2.5.7",
     "d3": "5.7.0",
