--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "immutable": "^3.8.2",
     "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
+    "ng-simple-slideshow": "^1.2.5",
     "ngx-quill": "^3.6.0",
     "ngx-wig": "^1.6.0",
     "quill": "^1.3.6",
