--- a/package.json
+++ b/package.json
@@ -28,63 +28,65 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.8",
-    "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.1.8",
-    "@angular/compiler": "^6.1.8",
-    "@angular/core": "^6.1.8",
-    "@angular/flex-layout": "^6.0.0-beta.18",
-    "@angular/forms": "^6.1.8",
-    "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.1.8",
-    "@angular/platform-browser-dynamic": "^6.1.8",
-    "@angular/router": "^6.1.8",
-    "@fortawesome/angular-fontawesome": "^0.2.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.4",
-    "@fortawesome/free-solid-svg-icons": "^5.3.1",
-    "@ng-select/ng-select": "^2.10.2",
-    "@ngrx/effects": "^6.1.0",
-    "@ngrx/router-store": "^6.1.0",
-    "@ngrx/store": "^6.1.0",
-    "@ngx-translate/core": "^10.0.2",
-    "@nrwl/nx": "6.3.1",
-    "@swimlane/ngx-charts": "9.0.0",
-    "angular-froala-wysiwyg": "^2.8.5",
-    "angular-oauth2-oidc": "^4.0.3",
+    "@angular/animations": "^7.0.2",
+    "@angular/cdk": "^7.0.2",
+    "@angular/common": "^7.0.2",
+    "@angular/compiler": "^7.0.2",
+    "@angular/core": "^7.0.2",
+    "@angular/flex-layout": "^7.0.0-beta.19",
+    "@angular/forms": "^7.0.2",
+    "@angular/material": "^7.0.2",
+    "@angular/platform-browser": "^7.0.2",
+    "@angular/platform-browser-dynamic": "^7.0.2",
+    "@angular/router": "^7.0.2",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.7",
+    "@fortawesome/free-solid-svg-icons": "^5.4.2",
+    "@ng-select/ng-select": "^2.11.2",
+    "@ngrx/effects": "^6.1.2",
+    "@ngrx/router-store": "^6.1.2",
+    "@ngrx/store": "^6.1.2",
+    "@ngx-translate/core": "^11.0.0",
+    "@nrwl/nx": "7.0.0",
+    "@swimlane/ngx-charts": "10.0.0",
+    "@types/hammerjs": "^2.0.36",
+    "angular-froala-wysiwyg": "^2.9.0",
+    "angular-oauth2-oidc": "^5.0.2",
     "bootstrap": "^4.1.3",
     "classlist.js": "1.1.20150312",
     "core-js": "^2.5.7",
     "cosmicjs": "^3.2.14",
     "d3": "5.7.0",
     "hammerjs": "^2.0.8",
-    "immutable": "^3.8.2",
+    "immutable": "^4.0.0-rc.12",
     "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
-    "ng-simple-slideshow": "^1.2.5",
-    "ngx-quill": "^3.6.0",
+    "ng-simple-slideshow": "^1.2.6",
+    "ngx-quill": "^4.0.0",
     "ngx-wig": "^1.6.0",
     "quill": "^1.3.6",
-    "reselect": "3.0.1",
-    "rxjs": "^6.3.2",
+    "reselect": "4.0.0",
+    "rxjs": "^6.3.3",
     "typeface-roboto": "^0.0.54",
+    "ui-carousel": "^0.2.0",
     "web-animations-js": "2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.3",
-    "@angular/cli": "6.2.3",
-    "@angular/compiler-cli": "^6.1.8",
-    "@angular/language-service": "^6.1.8",
-    "@ngrx/store-devtools": "^6.1.0",
-    "@nrwl/schematics": "6.3.1",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular-devkit/build-angular": "~0.10.4",
+    "@angular/cli": "7.0.4",
+    "@angular/compiler-cli": "^7.0.2",
+    "@angular/language-service": "^7.0.2",
+    "@ngrx/store-devtools": "^6.1.2",
+    "@nrwl/schematics": "7.0.0",
+    "@types/jasmine": "~2.8.9",
+    "@types/jasminewd2": "~2.0.5",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.4.4",
-    "jasmine-core": "~3.2.1",
-    "jasmine-marbles": "0.3.1",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~3.3.0",
+    "jasmine-marbles": "0.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.0.0",
+    "karma": "^3.1.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.2",
@@ -95,7 +97,7 @@
     "source-map-explorer": "^1.6.0",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
-    "typescript": "~2.9.2",
-    "webpack-bundle-analyzer": "^3.0.2"
+    "typescript": "~3.1.6",
+    "webpack-bundle-analyzer": "^3.0.3"
   }
 }
