--- a/package.json
+++ b/package.json
@@ -49,26 +49,25 @@
     "@ngx-translate/core": "^11.0.0",
     "@nrwl/nx": "7.0.0",
     "@swimlane/ngx-charts": "10.0.0",
+    "@types/d3": "^5.0.1",
     "@types/hammerjs": "^2.0.36",
     "angular-froala-wysiwyg": "^2.9.0",
     "angular-oauth2-oidc": "^5.0.2",
     "bootstrap": "^4.1.3",
     "classlist.js": "1.1.20150312",
     "core-js": "^2.5.7",
-    "cosmicjs": "^3.2.14",
-    "d3": "5.7.0",
+    "d3": "4.10.2",
     "hammerjs": "^2.0.8",
     "immutable": "^4.0.0-rc.12",
     "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
     "ng-simple-slideshow": "^1.2.6",
+    "ngx-bootstrap": "^3.1.1",
     "ngx-quill": "^4.0.0",
-    "ngx-wig": "^1.6.0",
     "quill": "^1.3.6",
     "reselect": "4.0.0",
     "rxjs": "^6.3.3",
     "typeface-roboto": "^0.0.54",
-    "ui-carousel": "^0.2.0",
     "web-animations-js": "2.3.1",
     "zone.js": "^0.8.26"
   },
