Add debug config for webclient and admin apps

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,10 +2,17 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch Chrome",
+      "name": "Debug hav500",
       "type": "chrome",
       "request": "launch",
       "url": "http://localhost:4200",
+      "webRoot": "${workspaceFolder}"
+    },
+    {
+      "name": "Debug admin",
+      "type": "chrome",
+      "request": "launch",
+      "url": "http://localhost:4201",
       "webRoot": "${workspaceFolder}"
     },
     {
