--- a/package.json
+++ b/package.json
@@ -28,30 +28,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.2",
-    "@angular/cdk": "^7.0.2",
-    "@angular/common": "^7.0.2",
-    "@angular/compiler": "^7.0.2",
-    "@angular/core": "^7.0.2",
+    "@angular/animations": "^7.0.4",
+    "@angular/cdk": "^7.0.4",
+    "@angular/common": "^7.0.4",
+    "@angular/compiler": "^7.0.4",
+    "@angular/core": "^7.0.4",
     "@angular/flex-layout": "^7.0.0-beta.19",
-    "@angular/forms": "^7.0.2",
-    "@angular/material": "^7.0.2",
-    "@angular/platform-browser": "^7.0.2",
-    "@angular/platform-browser-dynamic": "^7.0.2",
-    "@angular/router": "^7.0.2",
+    "@angular/forms": "^7.0.4",
+    "@angular/material": "^7.0.4",
+    "@angular/platform-browser": "^7.0.4",
+    "@angular/platform-browser-dynamic": "^7.0.4",
+    "@angular/router": "^7.0.4",
     "@fortawesome/angular-fontawesome": "^0.3.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.7",
-    "@fortawesome/free-solid-svg-icons": "^5.4.2",
-    "@ng-select/ng-select": "^2.11.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@ng-select/ng-select": "^2.12.1",
     "@ngrx/effects": "^6.1.2",
     "@ngrx/router-store": "^6.1.2",
     "@ngrx/store": "^6.1.2",
-    "@ngx-translate/core": "^11.0.0",
-    "@nrwl/nx": "7.0.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@nrwl/nx": "7.0.2",
     "@swimlane/ngx-charts": "10.0.0",
     "@types/d3": "^5.0.1",
     "@types/hammerjs": "^2.0.36",
-    "angular-froala-wysiwyg": "^2.9.0",
     "angular-oauth2-oidc": "^5.0.2",
     "bootstrap": "^4.1.3",
     "classlist.js": "1.1.20150312",
@@ -63,7 +62,8 @@
     "moment": "^2.22.2",
     "ng-simple-slideshow": "^1.2.6",
     "ngx-bootstrap": "^3.1.1",
-    "ngx-quill": "^4.0.0",
+    "ngx-image-gallery": "^1.3.1",
+    "ngx-quill": "^4.1.0",
     "quill": "^1.3.6",
     "reselect": "4.0.0",
     "rxjs": "^6.3.3",
@@ -72,15 +72,15 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.4",
-    "@angular/cli": "7.0.4",
-    "@angular/compiler-cli": "^7.0.2",
-    "@angular/language-service": "^7.0.2",
+    "@angular-devkit/build-angular": "~0.10.6",
+    "@angular/cli": "7.0.6",
+    "@angular/compiler-cli": "^7.0.4",
+    "@angular/language-service": "^7.0.4",
     "@ngrx/store-devtools": "^6.1.2",
-    "@nrwl/schematics": "7.0.0",
+    "@nrwl/schematics": "7.0.2",
     "@types/jasmine": "~2.8.9",
-    "@types/jasminewd2": "~2.0.5",
-    "@types/node": "~8.9.4",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "~10.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-marbles": "0.4.0",
@@ -91,7 +91,7 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "ngrx-store-freeze": "^0.2.4",
-    "prettier": "1.14.3",
+    "prettier": "1.15.2",
     "protractor": "^5.4.1",
     "source-map-explorer": "^1.6.0",
     "ts-node": "~7.0.1",
