--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "ngx-bootstrap": "^3.1.1",
     "ngx-image-gallery": "^1.3.1",
     "ngx-quill": "^4.1.0",
+    "node-sass": "^4.11.0",
     "quill": "^1.3.6",
     "reselect": "4.0.0",
     "rxjs": "^6.3.3",
