--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "rxjs": "^6.3.3",
     "typeface-roboto": "^0.0.54",
     "web-animations-js": "2.3.1",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "ngx-cookie-service": "^1.0.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.6",
