--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/d3": "^5.0.1",
     "@types/hammerjs": "^2.0.36",
     "angular-oauth2-oidc": "^5.0.2",
+    "backoff-rxjs": "^6.1.2",
     "bootstrap": "^4.1.3",
     "classlist.js": "1.1.20150312",
     "core-js": "^2.5.7",
@@ -62,6 +63,7 @@
     "moment": "^2.22.2",
     "ng-simple-slideshow": "^1.2.6",
     "ngx-bootstrap": "^3.1.1",
+    "ngx-cookie-service": "^1.0.10",
     "ngx-image-gallery": "^1.3.1",
     "ngx-quill": "^4.1.0",
     "node-sass": "^4.11.0",
@@ -70,8 +72,7 @@
     "rxjs": "^6.3.3",
     "typeface-roboto": "^0.0.54",
     "web-animations-js": "2.3.1",
-    "zone.js": "^0.8.26",
-    "ngx-cookie-service": "^1.0.10"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.6",
