--- a/package.json
+++ b/package.json
@@ -65,9 +65,11 @@
     "ngx-bootstrap": "^3.1.1",
     "ngx-cookie-service": "^1.0.10",
     "ngx-image-gallery": "^1.3.1",
-    "ngx-quill": "^4.1.0",
-    "node-sass": "^4.11.0",
+    "ngx-quill": "^4.4.0",
     "quill": "^1.3.6",
+    "@types/quill": "^1.3.10",
+    "quill-image-resize-module": "^3.0.0",
+    "node-sass": "^4.11.0",
     "reselect": "4.0.0",
     "rxjs": "^6.3.3",
     "typeface-roboto": "^0.0.54",
