--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/apps/havana500-webclient",
+            "outputPath": "../ServerSide/src/Havana500.API/wwwroot",
             "index": "apps/havana500-webclient/src/index.html",
             "main": "apps/havana500-webclient/src/main.ts",
             "polyfills": "apps/havana500-webclient/src/polyfills.ts",
