Add config to not delete the outputPath
Because in this path we save the images that we upload in the admin,
we can't delete this folder.

--- a/angular.json
+++ b/angular.json
@@ -18,6 +18,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "../ServerSide/src/Havana500.API/wwwroot",
+            "deleteOutputPath": false,
             "index": "apps/havana500-webclient/src/index.html",
             "main": "apps/havana500-webclient/src/main.ts",
             "polyfills": "apps/havana500-webclient/src/polyfills.ts",
