--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@swimlane/ngx-charts": "10.0.0",
     "@types/d3": "^5.0.1",
     "@types/hammerjs": "^2.0.36",
+    "@types/quill": "^1.3.10",
     "angular-oauth2-oidc": "^5.0.2",
     "backoff-rxjs": "^6.1.2",
     "bootstrap": "^4.1.3",
@@ -65,11 +66,11 @@
     "ngx-bootstrap": "^3.1.1",
     "ngx-cookie-service": "^1.0.10",
     "ngx-image-gallery": "^1.3.1",
+    "ngx-masonry": "^1.1.2",
     "ngx-quill": "^4.4.0",
-    "quill": "^1.3.6",
-    "@types/quill": "^1.3.10",
-    "quill-image-resize-module": "^3.0.0",
     "node-sass": "^4.11.0",
+    "quill": "^1.3.6",
+    "quill-image-resize-module": "^3.0.0",
     "reselect": "4.0.0",
     "rxjs": "^6.3.3",
     "typeface-roboto": "^0.0.54",
