--- a/package.json
+++ b/package.json
@@ -59,9 +59,12 @@
     "core-js": "^2.5.7",
     "d3": "4.10.2",
     "hammerjs": "^2.0.8",
+    "imagesloaded": "^4.1.4",
     "immutable": "^4.0.0-rc.12",
+    "masonry-layout": "^4.2.2",
     "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
+    "ng-masonry-grid": "^1.3.0",
     "ng-simple-slideshow": "^1.2.6",
     "ngx-bootstrap": "^3.1.1",
     "ngx-cookie-service": "^1.0.10",
