Add the masonry.js plugin to the assets
NOTE:
- This had to be added to the assets because it's JS code.
- It's not in use now, but it should be used

--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,9 @@
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
             ],
-            "scripts": []
+            "scripts": [
+              "apps/havana500-webclient/src/assets/masonry-layout/dist/masonry.pkgd.min.js"
+            ]
           },
           "configurations": {
             "production": {
